<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/card_view_margin"
    tools:context=".ui.yubiotp.YubiOtpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/otp_program" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:text="@string/otp_yubiotp_desc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_public_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_public_id"
        app:endIconContentDescription="@string/randomize"
        app:endIconDrawable="@drawable/ic_refresh_24dp"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_public_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="6"
            android:inputType="textNoSuggestions"
            tools:text="vvincredible" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_private_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_private_id"
        app:endIconContentDescription="@string/randomize"
        app:endIconDrawable="@drawable/ic_refresh_24dp"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_private_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="6"
            android:inputType="textNoSuggestions"
            tools:text="f6d6475b48b9" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_aes_key"
        app:endIconContentDescription="@string/randomize"
        app:endIconDrawable="@drawable/ic_refresh_24dp"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="6"
            android:inputType="textMultiLine|textNoSuggestions"
            tools:text="f6d6475b48b94f0d849a6c19bf8cc7f0d62255a0" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/slot_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_slot_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_slot_1" />

        <RadioButton
            android:id="@+id/radio_slot_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_slot_2" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_margin"
        android:text="@string/save" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/activity_margin"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/otp_use" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:text="@string/otp_read_yubiotp_desc" />

    <Button
        android:id="@+id/btn_request_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_read_yubiotp" />

</LinearLayout>