<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/card_view_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_margin"
            android:textAppearance="@android:style/TextAppearance.Large"
            tools:text="Key Management (Slot 9d)" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_margin">

            <TextView
                android:id="@+id/cert_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="4"
                tools:text="Issuer: yubico.com\nSubject name: yubico.com\nExpiration date:2019-11-01\nKey type: ECCP256" />

            <TextView
                android:id="@+id/no_cert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/piv_no_cert"
                android:visibility="gone" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/piv_certificate_desc"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureWithLargestChild="true"
            android:shrinkColumns="*">

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="2">

                <Button
                    android:id="@+id/import_cert"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/piv_import_cert" />

                <Button
                    android:id="@+id/generate_cert"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/piv_generate_cert" />


            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="2">

                <Button
                    android:id="@+id/attest"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:text="@string/piv_attest" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/piv_delete" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_margin"
            android:text="@string/piv_sign_desc"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:hint="@string/piv_message_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/placeholder_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piv_sign" />

    </LinearLayout>
</ScrollView>