<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Yubico.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            tools:text="YubiKey 5 NFC \nFirmware 5.2.1 \nSerial: 9681093" />

        <TextView
            android:layout_marginTop="@dimen/card_view_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mgmt_subtitle" />

        <GridLayout
            android:id="@+id/application_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/transport_usb" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/transport_nfc" />

            <CheckBox
                android:id="@+id/checkbox_usb_otp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_otp" />

            <CheckBox
                android:id="@+id/checkbox_nfc_otp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_otp" />

            <CheckBox
                android:id="@+id/checkbox_usb_u2f"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_u2f" />

            <CheckBox
                android:id="@+id/checkbox_nfc_u2f"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_u2f" />

            <CheckBox
                android:id="@+id/checkbox_usb_piv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_piv" />

            <CheckBox
                android:id="@+id/checkbox_nfc_piv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_piv" />

            <CheckBox
                android:id="@+id/checkbox_usb_fido2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_fido2" />

            <CheckBox
                android:id="@+id/checkbox_nfc_fido2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_fido2" />

            <CheckBox
                android:id="@+id/checkbox_usb_pgp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_pgp" />

            <CheckBox
                android:id="@+id/checkbox_nfc_pgp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_pgp" />

            <CheckBox
                android:id="@+id/checkbox_usb_oath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_oath" />

            <CheckBox
                android:id="@+id/checkbox_nfc_oath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/application_oath" />
        </GridLayout>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/need_yubikey"
            android:visibility="gone" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />


    </LinearLayout>
</ScrollView>