<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 Yubico.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:text="YubiKey 5 NFC \nFirmware 5.2.1 \nSerial: 9681093" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        android:text="@string/oath_add"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oath_issuer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_issuer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="6"
            android:inputType="textNoSuggestions"
            tools:text="Example" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_layout_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/oath_key"
        app:endIconContentDescription="@string/randomize"
        app:endIconDrawable="@drawable/ic_refresh_24dp"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="6"
            android:inputType="textNoSuggestions"
            tools:text="f6d6475b48b94f0d849a6c19bf8cc7f0d62255a0" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/activity_margin"
        android:text="@string/save" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        android:text="@string/oath_credentials"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/need_yubikey"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/credential_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>