<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019-2020 Yubico.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_margin="@dimen/card_view_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/big_logo"
            android:contentDescription="@string/yubico"
            tools:ignore="MissingPrefix"
            app:tint="@color/colorLightGreen" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Version 1.0 (1)" />


        <TextView
            android:layout_margin="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/about_app" />

        <TextView
            android:layout_margin="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright" />

    </LinearLayout>


</ScrollView>